# QtLog

./: .gitignore  README.md  pyproject.toml  ruff.toml  setup.py
example/: main.py  main.ui
qt_log/: qt_ui_logger.py  version.py
qtlog/: qt_ui_logger.py  stream_log.py  version.py
